# object

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
crates/examples/: Cargo.toml
crates/examples/src/: elfcopy.rs  elfstub.rs  lib.rs  objcopy.rs  objdump.rs
crates/examples/src/readobj/: elf.rs  macho.rs  mod.rs  pe.rs  xcoff.rs
crates/examples/testfiles/archive/: bsd.a.readobj  gnu.a.readobj  thin.a.readobj
crates/examples/testfiles/coff/: import_msvc.lib.objdump  import_msvc.lib.readobj
crates/examples/testfiles/elf/: base-aarch64-gnu-properties.o.readobj-elf-note  base-aarch64-gnu-properties.o.readobj.prop  base-aarch64.o.objdump  base-aarch64.o.readobj  base-aarch64.objdump  base-aarch64.readobj  base-crel.o.objdump  base-crel.o.readobj  base-debug-zlib.o.readobj-section  base-debug-zlib.o.readobj.compression  base-debug-zstd.o.readobj-section  base-debug-zstd.o.readobj.compression  base-mips64el.o.readobj  base-mips64el.readobj  base-relr-i686.objdump  base-relr-i686.readobj  base-relr-x86_64.objdump  base-relr-x86_64.readobj  base-strip.objdump  base-strip.readobj  base-x86_64-gnu-properties.o.readobj-elf-note  base-x86_64-gnu-properties.o.readobj.prop  base.copy  base.elfstub  base.o.objdump  base.o.readobj  base.objdump  base.readobj  comdat.o.objdump.section  comdat.o.readobj-section  comdat.o.readobj.section  libbase.so.copy  libbase.so.elfstub  libexports.so.objdump  libimports.so.objdump  nostd-mipsel.o.readobj  nostd-mipsel.readobj  symtab_shndx.o.objdump-shndx  symtab_shndx.o.objdump.symbol
crates/examples/testfiles/macho/: base-aarch64-codesign.readobj  base-aarch64-debug.o.objdump  base-aarch64-debug.o.readobj  base-aarch64.o.objcopy  base-aarch64.o.objdump  base-aarch64.o.readobj  base-aarch64.objdump  base-aarch64.readobj  base-x86_64-debug.o.objdump  base-x86_64-debug.o.readobj  base-x86_64.o.objcopy  base-x86_64.o.objdump  base-x86_64.o.readobj  base-x86_64.objdump  base-x86_64.readobj  exports.o.objdump  fixup-chains-arm64.dylib.readobj  fixup-chains-arm64e.dylib.readobj  fixup-chains-armv7k.dylib.readobj  fixup-dyldinfo.dylib.readobj  imports-dyldinfo.bundle.objdump  imports-dyldinfo.bundle.readobj  imports.bundle.objdump  imports.bundle.readobj  libexports.dylib.objdump  libexports.dylib.readobj  reloc-aarch64.o.objcopy  reloc-aarch64.o.objdump  reloc-aarch64.o.readobj  reloc-arm.o.objdump  reloc-arm.o.readobj  reloc-i386.o.objdump  reloc-i386.o.readobj  reloc-x86_64.o.objcopy  reloc-x86_64.o.objdump  reloc-x86_64.o.readobj
crates/examples/testfiles/omf/: base-borland-debug.obj.objdump  base-borland.obj.objdump  base-watcom-debug.obj.objdump  base-watcom.obj.objdump  comdat-borland-debug.obj.objdump  comdat-borland.obj.objdump  comdat-watcom-debug.obj.objdump  comdat-watcom.obj.objdump  comprehensive_test.obj.objdump  test_comdat.obj.objdump  test_lidata.obj.objdump
crates/examples/testfiles/pe/: base-bigobj.o.objdump  base-bigobj.o.readobj  base-bigobj.obj.objdump  base-bigobj.obj.readobj  base-gnu.exe.objdump  base-gnu.exe.objdump-partial  base-gnu.exe.readobj  base-gnu.exe.readobj-partial  base-gnu.exe.readobj-pe-base-reloc  base.exe.objdump  base.exe.readobj.0  base.exe.readobj.reloc  base.o.objdump  base.o.readobj  base.obj.objdump  base.obj.readobj  export.dll.objdump  export.dll.readobj  import.exe.objdump  import.exe.readobj  resource.exe.readobj-pe-resource  resource.exe.readobj.0  weak-extern.o.objdump  weak-extern.o.readobj
crates/examples/testfiles/wasm/: base.o.objdump  base.wasm.objdump  global-wasm32.objdump  global-wasm64-import.objdump  global-wasm64.objdump
crates/examples/testfiles/xcoff/: base.o.objdump  base.o.readobj  base.xcoff.objdump  base.xcoff.readobj  base32.o.objdump  base32.o.readobj  base32.xcoff.objdump  base32.xcoff.readobj
crates/examples/tests/: testfiles.rs
crates/rewrite/: Cargo.toml
crates/rewrite-cli/: Cargo.toml
crates/rewrite/src/: elf.rs  error.rs  lib.rs  macho.rs  main.rs  rewriter.rs
crates/rewrite/testfiles/elf/: annobin-strtab  base-mold-2.2.add-runpath  base-relr-i686.noop  base-relr-x86_64.noop  base.add-needed  base.add-rpath  base.add-runpath  base.delete-needed  base.delete-section  base.delete-symbol  base.noop  base.rename-section  base.rename-symbol  base.replace-needed  base.set-interpreter  base.set-runpath  libbase.so.noop
crates/rewrite/testfiles/macho/: base-x86_64.noop  base-x86_64.o.delete-section  base-x86_64.o.delete-symbol  base-x86_64.o.noop  base-x86_64.o.rename-section  base-x86_64.o.rename-symbol  fixup-chains-armv7k.dylib.noop
crates/rewrite/tests/: testfiles.rs
exampels/: Readme.md  simple.rs
examples/: Readme.md  dyldcachedump.rs  dyldcacheobjdump.rs  elfcopy.rs  nm.rs  objcopy.rs  objdump.rs  read_section_from_elf.rs  readobj.rs  simple.rs
scripts/: winnt-diff.py
src/: archive.rs  common.rs  constants.rs  elf.rs  endian.rs  goff.rs  lib.rs  macho.rs  obj_linux.rs  obj_macos.rs  object_trait.rs  omf.rs  pe.rs  pod.rs  traits.rs  wasm.rs  xcoff.rs
src/read/: any.rs  archive.rs  coff.rs  elf.rs  gnu_compression.rs  macho.rs  mod.rs  pe.rs  read_cache.rs  read_ref.rs  symbol_map.rs  traits.rs  util.rs  wasm.rs
src/read/coff/: comdat.rs  file.rs  import.rs  mod.rs  relocation.rs  section.rs  symbol.rs
src/read/elf/: attributes.rs  comdat.rs  compression.rs  dynamic.rs  export.rs  file.rs  hash.rs  import.rs  mod.rs  note.rs  relocation.rs  section.rs  segment.rs  symbol.rs  version.rs
src/read/macho/: codesign.rs  dyld_cache.rs  dyld_info.rs  export.rs  exports_trie.rs  fat.rs  file.rs  fixup.rs  function_starts.rs  import.rs  load_command.rs  mod.rs  relocation.rs  (+3 more)
src/write/: coff.rs  elf.rs  macho.rs  mod.rs  pe.rs  string.rs  util.rs  xcoff.rs
tests/: aligned_sections.rs  bss.rs  coff.rs  common.rs  integration.rs  parse_self.rs  round_trip.rs  serde.rs  tls.rs
tests/read/: coff.rs  elf.rs  macho.rs  mod.rs  omf.rs
tests/round_trip/: bss.rs  coff.rs  comdat.rs  common.rs  elf.rs  macho.rs  mod.rs  reloc.rs  section_flags.rs  tls.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+32 files in other folders)
