[package]
name = "object"
version = "0.18.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Philip Craig <philipjcraig@gmail.com>"]
edition = "2018"
exclude = ["/.coveralls.yml", "/.travis.yml"]
keywords = ["object", "elf", "mach-o", "pe", "coff"]
license = "Apache-2.0/MIT"
repository = "https://github.com/gimli-rs/object"
description = "A unified interface for reading and writing object file formats."

[package.metadata.docs.rs]
all-features = true

[dependencies]
crc32fast = { version = "1.2", optional = true }
flate2 = { version = "1", optional = true }
indexmap = { version = "1.1", optional = true }
target-lexicon = { version = "0.10" }
wasmparser = { version = "0.51.0", optional = true }

[dev-dependencies]
memmap = "0.7"

[features]
read_core = []
read = ["read_core", "coff", "elf", "macho", "pe", "wasm"]
write_core = ["crc32fast", "indexmap", "std"]
write = ["write_core", "coff", "elf", "macho"]

std = []
compression = ["flate2", "std"]

coff = []
elf = []
macho = []
pe = ["coff"]
wasm = ["wasmparser"]

default = ["read", "compression"]

[[example]]
name = "nm"
required-features = ["read"]

[[example]]
name = "objcopy"
required-features = ["read", "write"]

[[example]]
name = "objdump"
required-features = ["read"]
