[package]
name = "object"
version = "0.21.1"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Philip Craig <philipjcraig@gmail.com>"]
edition = "2018"
exclude = ["/.coveralls.yml", "/.travis.yml"]
keywords = ["object", "elf", "mach-o", "pe", "coff"]
license = "Apache-2.0/MIT"
repository = "https://github.com/gimli-rs/object"
description = "A unified interface for reading and writing object file formats."

[package.metadata.docs.rs]
features = ['all']

[dependencies]
crc32fast = { version = "1.2", optional = true }
flate2 = { version = "1", optional = true }
indexmap = { version = "1.1", optional = true }
wasmparser = { version = "0.57", optional = true }

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }
alloc = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-alloc' }

[dev-dependencies]
memmap = "0.7"

[features]
read_core = []
read = ["read_core", "coff", "elf", "macho", "pe", "wasm", "unaligned"]
write_core = ["crc32fast", "indexmap", "std"]
write = ["write_core", "coff", "elf", "macho"]

std = []
compression = ["flate2", "std"]
# Treat all types as unaligned. May be useful to enable when processing files
# for architectures that have no alignment constraints.
unaligned = []

coff = []
elf = []
macho = []
pe = ["coff"]
wasm = ["wasmparser"]

default = ["read", "compression"]

# Umbrella feature for enabling all user-facing features of this crate. Does not
# enable internal features like `rustc-dep-of-std`.
all = ["read", "write", "std", "compression", "default"]

# Use of --all-features is not supported.
# This is a dummy feature to detect when --all-features is used.
cargo-all = []

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
rustc-dep-of-std = ['core', 'compiler_builtins', 'alloc']

[[example]]
name = "nm"
required-features = ["read"]

[[example]]
name = "objcopy"
required-features = ["read", "write"]

[[example]]
name = "objdump"
required-features = ["read_core"]
