[package]
name = "object"
version = "0.24.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Philip Craig <philipjcraig@gmail.com>"]
edition = "2018"
exclude = ["/.coveralls.yml", "/.travis.yml"]
keywords = ["object", "elf", "mach-o", "pe", "coff"]
license = "Apache-2.0/MIT"
repository = "https://github.com/gimli-rs/object"
description = "A unified interface for reading and writing object file formats."

[package.metadata.docs.rs]
features = ['all']

[dependencies]
crc32fast = { version = "1.2", optional = true }
flate2 = { version = "1", optional = true }
indexmap = { version = "1.1", optional = true }
wasmparser = { version = "0.57", optional = true }

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }
alloc = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-alloc' }

[dev-dependencies]
memmap = "0.7"

[features]
#=======================================
# Read/write features.

# Core read support. You will need to enable some file formats too.
read_core = []
# Read support for all file formats (including unaligned files).
read = ["read_core", "archive", "coff", "elf", "macho", "pe", "unaligned"]
# Core write support. You will need to enable some file formats too.
write_core = ["crc32fast", "indexmap", "std"]
# Write support for all file formats.
write = ["write_core", "coff", "elf", "macho"]

#=======================================
# Misc features.

# Enable things that require libstd.
# Currently, this provides an `Error` implementation.
std = []
# Enable decompression of compressed sections.
# This feature is not required if you want to do your own decompression.
compression = ["flate2", "std"]
# Treat all types as unaligned.
# Normally types use the alignment required by the specifications, but
# sometimes files do not strictly follow the specifications.
# This may be useful to enable when processing files for architectures
# that have no alignment constraints.
unaligned = []

#=======================================
# File format features.
archive = []
coff = []
elf = []
macho = []
pe = ["coff"]
wasm = ["wasmparser"]

#=======================================
# By default, support all read features.
default = ["read", "compression"]

#=======================================
# Umbrella feature for enabling all user-facing features of this crate. Does not
# enable internal features like `rustc-dep-of-std`.
all = ["read", "write", "std", "compression", "default"]

# Use of --all-features is not supported.
# This is a dummy feature to detect when --all-features is used.
cargo-all = []

#=======================================
# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
rustc-dep-of-std = ['core', 'compiler_builtins', 'alloc']

[[example]]
name = "ar"
required-features = ["read_core", "archive"]

[[example]]
name = "objcopy"
required-features = ["read", "write"]

[[example]]
name = "objdump"
required-features = ["read"]

[[example]]
name = "objectmap"
required-features = ["read_core"]

[[example]]
name = "nm"
required-features = ["read"]

[[example]]
name = "readobj"
required-features = ["read"]
