[package]
name = "object-examples"
version = "0.0.0"
edition = "2018"

[dependencies]
memmap2 = "0.5"
object = { path = "../..", default-features = false }

[dev-dependencies]
glob = "0.3"

[features]
read = ["object/read"]
default = ["read"]

[[bin]]
name = "ar"
required-features = ["object/read_core", "object/archive"]

[[bin]]
name = "dyldcachedump"
required-features = ["object/read"]

[[bin]]
name = "elfcopy"
required-features = ["object/read_core", "object/write_core", "object/elf"]

[[bin]]
name = "elftoefi"
required-features = ["object/read_core", "object/write_core", "object/elf", "object/pe"]

[[bin]]
name = "objcopy"
required-features = ["object/read", "object/write"]

[[bin]]
name = "objdump"
required-features = ["read"]

[[bin]]
name = "objectmap"
required-features = ["object/read"]

[[bin]]
name = "nm"
required-features = ["object/read"]

[[bin]]
name = "pecopy"
required-features = ["object/read_core", "object/write_core", "object/pe"]

[[bin]]
name = "readobj"
required-features = ["read"]
