[package]
name = "object-examples"
version = "0.0.0"
edition = "2018"

[dependencies]
clap = "4.3.24"
memmap2 = "0.9.4"
object = { path = "../..", default-features = false }

[dev-dependencies]
glob = "0.3"

[features]
read = ["object/read"]
write = ["object/write"]
wasm = ["object/wasm"]
xcoff = ["object/xcoff"]
all = ["read", "write", "wasm", "xcoff"]
unstable-all = ["all"]
default = ["read"]

[[bin]]
name = "ar"
required-features = ["object/read_core", "object/archive"]

[[bin]]
name = "dyldcachedump"
required-features = ["object/read"]

[[bin]]
name = "elftoefi"
required-features = ["object/read_core", "object/write_core", "object/elf", "object/pe", "object/std"]

[[bin]]
name = "objcopy"
required-features = ["read", "write"]

[[bin]]
name = "objdump"
required-features = ["read"]

[[bin]]
name = "objectmap"
required-features = ["object/read"]

[[bin]]
name = "nm"
required-features = ["object/read"]

[[bin]]
name = "pecopy"
required-features = ["object/read_core", "object/write_core", "object/pe", "object/std"]

[[bin]]
name = "readobj"
required-features = ["read"]
