[package]
name = "object-rewrite-cli"
version = "0.0.0"
edition = "2021"
description = "Rewrite object files with modifications"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.3.24", features = ["cargo"] }
env_logger = { version = "0.11.2", default-features = false }
log = "0.4.20"
memmap2 = "0.9.4"
object-rewrite = { path = "../rewrite", features = ["logging"] }

[[bin]]
name = "object-rewrite"
path = "src/main.rs"
